--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,20 @@ services:
       NODE_ENV: production
     ports:
       - 8080:8080
+  proxy:
+    image: nginx:alpine
+    container_name: web-proxy
+    restart: unless-stopped
+    volumes:
+      - ./proxy.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - 80:80
+    depends_on:
+      - gdweb
+    networks:
+      - app-networks
+networks:
+  app-network:
+    driver: bridge
+
+
